ollama output json

--- a/prompts/templates.yaml
+++ b/prompts/templates.yaml
@@ -1,1 +1,7 @@
 # templates.yaml
+strict:
+  description: Act as a strict code reviewer...
+mentor:
+  description: Pretend you are mentoring a junior...
+test_focus:
+  description: Focus only on missing or weak tests...
